mule-user-guide/v/3.5/script-component-reference.adoc
= 脚本组件参考

尽管Mule中有丰富的元素可供选择，但您可能会发现自己需要创建自定义代码来执行全部或部分复杂任务。脚本组件是适用于这些情况的理想多功能工具。脚本组件在您对现有系统进行现代化时也很方便，因为您可以简单地将旧的代码行放入脚本组件中，而不必通过一系列不同的Mule组件重新构造代码的行为（这并不理想尽管），但是调试和维护角度）。使用Script组件时，可以选择以下任何脚本引擎：Groovy，JavaScript，Python或Ruby。虽然Java在脚本组件中不可用，但有一个单独的专用Java组件，其工作方式相似。 Java在不同的元素中处理方式不同，因为Java是Mule编码的本地语言。

在Anypoint Studio中，如果您浏览调色板，则会注意到每种不同的支持语言都有单独的组件;使用其中之一与使用通用脚本组件，然后在"scripting engine"字段中选择相应的语言相同。

对于这些语言中的每一种，除"component"之外，还有一个 link:/mule-user-guide/v/3.7/script-transformer-reference[变压器]。变形金刚更专业化，他们已经准备好将消息的有效载荷作为输入，并将有效载荷作为输出返回。任何你可以用变压器做的事情也可以用一个组件完成。

[TIP]
如果你更喜欢使用.Net编码，那么你应该查看https://www.mulesoft.com/integration-solutions/soa/net-framework-integration[.NET集成框架]。



== 基本用法

要在脚本组件中进行设置，请确定要使用的脚本引擎以及脚本本身，您可以直接在元素中引用或键入脚本。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

To configure the Script component, double-click the Script element to open the** Properties Editor**. Use the *General* tab to specify the file location of the script or simply type in your code on the script text window.

Choose a programming language for the scripting component:

* Groovy
* JavaScript
* Python
* Ruby

[TIP]
Keep in mind that if you'd rather code in Java, there's also a link:/mule-user-guide/v/3.7/java-component-reference[Java Component] that works very similarly.

image:basic+conf.png[basic+conf]

[%header,cols="2*"]
|===
|Panel |Description
|*Display Name* |Defaults to the generic component name. Change the *Display Name*, which must be alpha-numeric, to reflect the component's specific role, such as, `Welcome Page Script`.
|*Engine* |From the *Engine* property drop-down list select a scripting engine.  The default scripting engine is Groovy.
|Select one of the following: |*Script Text*: Type the script that the component loads directly into this space. +
*Script File*: Enter the location of the script to be loaded by the component. The file can reside on the classpath or the local file system**. +
*Script Reference*: Lets you add a Java bean, which encapsulates multiple objects into a single bean. The Script component can then store and re-use the bean when applicable.
|===

....
[tab,title="XML Editor"]
....


Choose a programming language for the scripting component::

* Groovy
* JavaScript
* Python
* Ruby

Regarding the code itself, there are three ways of using the Script component:

*Add code directly*: Add a child element containing the code itself
*File reference*: Enter the location of the script to be loaded by the component. The file can reside on the classpath or the local file system**.
*Script* reference**: Lets you add a Java bean, which encapsulates multiple objects into a single bean. The Script component can then store and re-use the bean when applicable.

[TIP]
Keep in mind that if you'd rather code in Java, there's also a link:/mule-user-guide/v/3.7/java-component-reference[Java Component] that works very similarly.

Adding code directly:

[source, xml, linenums]
----
<scripting:component doc:name="Script">
  <scripting:script engine="Groovy">
    <script:text>
        return payload.toString().replaceAll("$oldStr", "$newStr")
     </script:text>
    </script:script>
</scripting:component>
----

With a file reference:

[source, xml, linenums]
----
<scripting:component doc:name="Script">
    <scripting:script engine="Groovy" file="myCode.gy"/>
</scripting:component>
----

With a script reference:

[source, xml, linenums]
----
<scripting:component doc:name="Script">
   <scripting:script engine="Groovy" script-ref="Bean"/>
</scripting:component>
----

[%header,cols="2*"]
|===
|Panel |Description
|`doc:Name` |Displays a name when looking at the element in the Studio visual editor.
|`engine` |Select the scripting engine to run the script. The default scripting engine is Groovy.
|`file` |Enter the location of the script to be loaded by the component. The file can reside on the classpath or the local file system.
a|`script-ref`
|*Script Reference*: Lets you add a Java bean, which encapsulates multiple objects into a single bean. The Script component can then store and re-use the bean when applicable.
|===

[%header,cols="2*"]
|===
|Child element |Description
a|`script:text` |Add this as a child element and type the script into it, the component will execute this code.
a|`property` |Define a property that is callable from the script.
|===

....
------

== 高级配置

[tabs]
------
[tab,title="Studio Visual Editor"]
....

Use the Advanced tab to optionally configure interceptors and, depending on the interceptor, enter Spring values. In Groovy, Python, and Ruby you also have the option to specify script properties, which are key/value pairs used to alter or change properties in the script.

image:advanced+conf.png[advanced+conf]

=== Interceptors

Interceptors alter the values or references of particular properties in a script. They are configured to provide additional services to a message as it flows through a component. For example, you can configure an interceptor to execute scheduling or logging of a particular event while a message is being processed. The Script component also includes a custom interceptor which allows you to configure settings for Spring elements.

For example, you can add an interceptor that logs transactions and the time for each transaction. Use the *Add Custom Interceptor* to create a custom interceptor that can reference Spring objects. The *Interceptor Stack* enables you to bundle multiple interceptors. Use the Interceptor Stack to apply multiple interceptors on a Groovy component. The interceptors are applied in the order defined in the stack.

=== Script Properties

Configure these parameters to define the attribute keys and their associated values. This enables the script component to quickly look up a value associated with a key.

....
[tab,title="XML Editor"]
....

=== Interceptors

Interceptors alter the values or references of particular properties in a script. They are configured to provide additional services to a message as it flows through a component. For example, you can configure an interceptor to execute scheduling or logging of a particular event while a message is being processed. The Script component also includes a custom interceptor which allows you to configure settings for Spring elements.

For example, you can add an interceptor that logs transactions and the time for each transaction. You can add a *Custom Interceptor* that references Spring objects. The *Interceptor Stack* enables you to bundle multiple interceptors. Use the Interceptor Stack to apply multiple interceptors on a Groovy component. The interceptors are applied in the order defined in the stack.

[source, xml, linenums]
----
<scripting:component doc:name="Groovy">
    <logging-interceptor/>
    <scripting:script engine="Groovy" file="myCode.gy">
    </scripting:script>
</scripting:component>
----

=== Script Properties

Configure these parameters to define the attribute keys and their associated values. This enables the script component to quickly look up a value associated with a key.

[source, xml, linenums]
----
<scripting:component doc:name="Groovy">
    <scripting:script engine="Groovy" file="myCode.gy">
        <property key="myProperty" value="#[payload.myProperty]"/>
    </scripting:script>
</scripting:component>
----

....
------

== 完整代码示例

下面的示例使用两个属性并执行直接写入组件的Groovy代码。执行的代码检查有效负载并将字符串"1"的每个实例替换为字符串"x"，这两个值都是在属性中定义的。

[source, xml, linenums]
----
<flow name="groovyTransformerWithParameters">
  <script:transformer name="stringReplaceWithParams">
    <script:script engine="groovy">
        <property key="oldStr" value="l" />
        <property key="newStr" value="x" />
        <script:text>
            return payload.toString().replaceAll("$oldStr", "$newStr")
        </script:text>
    </script:script>
  </script:transformer>
</flow>
----

以下示例使用 link:http://en.wikipedia.org/wiki/Change-making_problem[“贪婪硬币兑换器”算法]将一种货币转换为另一种货币。它使用一些变换器来转换输入数据，然后根据传递参数的值应用以下两种算法之一：Groovy中的一种（如果货币为美元），或者使用英制磅的Python中的一种。

[source, xml, linenums]
----
<flow name="greedy">
    <http:inbound-endpoint host="localhost" port="8081" path="/" />
    <http:body-to-parameter-map-transformer />
     
    <set-payload value="#[payload['amount']]" />
    <transformer ref="StringToNumber" />
    <transformer ref="DollarsToCents"/>
         
        <choice>
            <when expression="payload.currency == 'USD'">
                <scripting:component doc:name="USD Currency Script">
                        <scripting:script file="greedy.groovy">
                            <property key="currency" value="USD"/>
                        </scripting:script>
                    </scripting:component>
                </processor-chain>
             </when>
             <when expression="payload.currency == 'GBP'">
                <processor-chain>
                    <scripting:component doc:name="GBP Currency Script">
                        <scripting:script file="greedy.py">
                            <property key="currency" value="GBP"/>
                        </scripting:script>
                    </scripting:component>
                </processor-chain>
             </when>
        </choice>
</flow>
----

下面是该算法的常规实现：

[source, code, linenums]
----
// Adapted from the Groovy Cookbook
// https://web.archive.org/web/20150213041152/http://groovy.codehaus.org/Greedy+Coin+Changer+in+Groovy
  
enum USD {
    quarters(25), dimes(10), nickels(5), pennies(1)
    USD(v) { value = v }
    final value
}
  
enum GBP {
    two_pounds (200), pounds (100), fifty_pence(50), twenty_pence(20), ten_pence(10), five_pence(5), two_pence(2), pennies(1)
    GBP(v) { value = v }
    final value
}
  
def change(currency, amount) {
  currency.values().inject([]){ list, coin ->
     int count = amount / coin.value
     amount = amount % coin.value
     list += "$count $coin"
  }
}
  
switch (currency) {
    case "USD": return change(USD, payload).toString()
    case "GBP": return change(GBP, payload).toString()
    default: throw new AssertionError("Unsupported currency: $currency")
}
----

这是该算法的Python版本：

[source, code, linenums]
----
# Adapted from "Python Algorithms: Greedy Coin Changer" by Noah Gift
# http://www.oreillynet.com/onlamp/blog/2008/04/python_greedy_coin_changer_alg.html
  
import sys
  
class Change:
    def __init__(self, currency, amount):
        self.amount = amount
        if currency == "USD":
            self.coins = [1,5,10,25]
            self.coin_lookup = {25: "quarters", 10: "dimes", 5: "nickels", 1: "pennies"}
        elif currency == "GBP":
            self.coins = [1,2,5,10,20,50,100,200]
            self.coin_lookup = {200: "two_pounds", 100: "pounds", 50: "fifty_pence", 20: "twenty_pence", 10: "ten_pence", 5: "five_pence", 2: "two_pence", 1: "pennies"}
        #else:
        #   print "Currency $currency not recognized"
        #   exit 1
        self.result = ""
  
    def printer(self,num,coin):
        if num:
            if coin in self.coin_lookup:
                if self.result == "":
                    self.result = '%1.0f %s' % (num, self.coin_lookup[coin])
                else:
                    self.result = '%s, %1.0f %s' % (self.result, num, self.coin_lookup[coin])
  
    def recursive_change(self, rem):
        if len(self.coins) == 0:
            return []
        coin = self.coins.pop()
        num, new_rem = divmod(rem, coin)
        self.printer(num,coin)
        return self.recursive_change(new_rem) + [num]
  
c = Change(currency, payload)
c.recursive_change(c.amount)
result = "[" + c.result + "]"
----

== 另请参阅

* 欲了解更多信息，请参阅Mule ESB页面 link:/mule-user-guide/v/3.6/scripting-module-reference[脚本模块]
* 详细了解 link:/mule-user-guide/v/3.6/javascript-component-reference[JavaScript组件]
* 详细了解 link:/mule-user-guide/v/3.6/ruby-component-reference[Ruby组件]
* 详细了解 link:/mule-user-guide/v/3.7/groovy-component-reference[Groovy组件]
* 详细了解 link:/mule-user-guide/v/3.7/python-component-reference[Python组件]
* 详细了解 link:/mule-user-guide/v/3.7/java-component-reference[Java组件]
